@@ -1,3 +1,7 @@
+2000-03-10  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* ftpclass.cc: disallow double ABOR, disconnect instead.
+
 2000-03-09  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* ftpclass.cc: (GetBetterConnection) don't touch CONNECTING_STATE.
